CSS corrections for text, home alignment

--- a/portal/resources/sass/_variables.scss
+++ b/portal/resources/sass/_variables.scss
@@ -1,19 +1,14 @@
 // Body
-$body-bg: #f8fafc;
-
-// Typography
-$font-family-sans-serif: 'Exo', sans-serif;
-$font-size-base: 0.9rem;
-$line-height-base: 1.6;
+$body-bg: #000000;
 
 // Colors
-$blue: #3490dc;
+$blue: #0d6083;
 $indigo: #6574cd;
-$purple: #9561e2;
-$pink: #f66d9b;
-$red: #e3342f;
+$purple: #c503fd;
+$pink: #faa8aa;
+$red: #e10505;
 $orange: #f6993f;
-$yellow: #ffed4a;
-$green: #38c172;
+$yellow: #ffe139;
+$green: #04a800;
 $teal: #4dc0b5;
-$cyan: #6cb2eb;
+$cyan: #9db8c3;
