--- a/portal/resources/sass/app.scss
+++ b/portal/resources/sass/app.scss
@@ -37,6 +37,12 @@ a, a:visited {
   color: rgb(144, 192, 64) !important;
 }
 
+BODY, P, TD {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 13px;
+  color: white;
+}
+
 .b {
   BORDER-RIGHT: #373737 3pt outset;
   BORDER-TOP: #373737 3pt outset;
